--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Farro&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
     <script src="clock.js" charset="utf-8" defer></script>
-    <script src="list.js" charset="utf-8" defer></script>
+    <script src="list2.js" charset="utf-8" defer></script>
     <script src="greeting.js" charset="utf-8" defer></script>
     <script src="weather.js" charset="utf-8" defer></script>
     <script src="background.js" charset="utf-8" defer></script>
