todoList3(버튼기능 추가)

--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Farro&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
     <script src="clock.js" charset="utf-8" defer></script>
-    <script src="list2.js" charset="utf-8" defer></script>
+    <script src="list.js" charset="utf-8" defer></script>
     <script src="greeting.js" charset="utf-8" defer></script>
     <script src="weather.js" charset="utf-8" defer></script>
     <script src="background.js" charset="utf-8" defer></script>
@@ -51,9 +51,15 @@
           </div>
         </div>
         <div class="rightForm">
-          <div class="toDoBox">
+          <div class="todoText">
+            <p>TO DO LIST</p>
+            <div class="toDoBox">
+            </div>
           </div>
-          <div class="peddingBox">
+          <div class="penddingText">
+            <p>PENDDING LIST</p>
+            <div class="peddingBox">
+            </div>
           </div>
         </div>
     </div>
